--- a/_data/pubimg.yaml
+++ b/_data/pubimg.yaml
@@ -2,3 +2,4 @@ qen-diffusion: teaser2.pdf
 robust-PIME: acc.pdf
 observerFF: ff-network.png
 actor-free-cvx: cvx.png
+p-controller: P-CONTROLLER.pdf
